# hyperspec

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: index.md
docs/reference/: io.md  registration.md  stats.md
examples/: cropper.py  register.py
hyperspec/: __init__.py  cli.py  io.py  registration.py  stats.py
reference/io/: index.html
reference/registration/: index.html
reference/stats/: index.html
search/: search_index.json
tests/: test_stats.py
