[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperspec"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Simon Mutch", email = "smutch@unimelb.edu.au" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "spectral>=0.23",
    "xarray>=2023.3",
    "numpy>=1.23",
    "scipy>=1.10",
    "opencv-python>=4.7",
    "zarr>=2.14",
    "typer>=0.7",
    "imutils>=0.5",
    "scikit-learn>=1.2",
    "holoviews>=1.16",
    "panel>=1.1.1",
    "param >=1.12.0,<3.0",
]

[project.urls]
Documentation = "https://github.com/unknown/hyperspec#readme"
Issues = "https://github.com/unknown/hyperspec/issues"
Source = "https://github.com/unknown/hyperspec"

[project.scripts]
hyperspec = "hyperspec.cli:app"

[tool.hatch.version]
path = "hyperspec/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "write-the>=0.7.5",
  "pexpect>=4.8"
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = false
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:hyperspec tests}"
style = [
  "ruff --exclude 'typings/*' {args:.}",
  "black --exclude 'typings/*' --check --diff {args:.}",
]
fmt = [
  "black --exclude 'typings/*' {args:.}",
  "ruff --exclude 'typings/*' --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py39"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py39"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore magic values
  "PLR2004"
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["hyperspec"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["hyperspec", "tests"]
branch = true
parallel = true
omit = [
  "hyperspec/__about__.py",
]

[tool.coverage.paths]
hyperspec = ["hyperspec", "*/hyperspec/hyperspec"]
tests = ["tests", "*/hyperspec/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
ignore_missing_imports = true
